# cs5607

./: .gitignore  CMakeLists.txt  compile_linux.sh
lib/: ._glfw-3.1.2
lib/glfw-3.1.2/: ._CMake  ._CMakeLists.txt  ._COPYING.txt  ._README.md  ._cmake_uninstall.cmake.in  ._deps  ._docs  ._examples  ._include  ._src  ._tests  CMakeLists.txt  CMakeLists.txt~
lib/glfw-3.1.2/CMake/: ._MacOSXBundleInfo.plist.in  ._amd64-mingw32msvc.cmake  ._i586-mingw32msvc.cmake  ._i686-pc-mingw32.cmake  ._i686-w64-mingw32.cmake  ._modules  ._x86_64-w64-mingw32.cmake
lib/glfw-3.1.2/docs/: ._CMakeLists.txt  ._Doxyfile.in  ._DoxygenLayout.xml  ._build.dox  ._compat.dox  ._compile.dox  ._context.dox  ._extra.css  ._extra.less  ._footer.html  ._header.html  ._html  ._input.dox  ._internal.dox  ._intro.dox  ._main.dox  ._monitor.dox  ._moving.dox  ._news.dox  ._quick.dox  ._rift.dox  ._window.dox
lib/glfw-3.1.2/examples/: ._CMakeLists.txt  ._boing.c  ._gears.c  ._heightmap.c  ._particles.c  ._simple.c  ._splitview.c  ._wave.c
lib/glfw-3.1.2/include/: ._GLFW
lib/glfw-3.1.2/src/: ._CMakeLists.txt  ._cocoa_init.m  ._cocoa_monitor.m  ._cocoa_platform.h  ._cocoa_window.m  ._context.c  ._egl_context.c  ._egl_context.h  ._glfw3.pc.in  ._glfw3Config.cmake.in  ._glfw_config.h.in  ._glx_context.c  ._glx_context.h  ._init.c  ._input.c  ._internal.h  ._iokit_joystick.h  ._iokit_joystick.m  ._linux_joystick.c  ._linux_joystick.h  ._mach_time.c  ._mir_init.c  (+32 more)
src/: ._BasicTest.cpp  ._ShaderStuff.hpp  ._fshader1.glsl  ._vshader1.glsl  BasicTest.cpp  ShaderStuff.hpp  fshader1.glsl  vshader1.glsl
(+239 files in other folders)
